--- a/z.lab.html
+++ b/z.lab.html
@@ -57,7 +57,7 @@
   <br>
   <center><h1>Zhonix StudyRoom</center></h1>
   <br>
-  center><img src="bg.png" style="position: absolute;width:50vw;top: 15vw;right: 26vw;"></center>
+  <center><img src="bg.png" style="position: absolute;width:50vw;top: 15vw;right: 26vw;"></center>
 
   <a href="https://smpinhwa.edu.my/"><img src="peng.png" style="position: relative;width:11vw;height:5vw;position: absolute;top: 30vw;right: 64vw;"></a>
 
