--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
   <title>zhonix.lab</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    @import url('http://fonts.cdnfonts.com/css/common-pixel');
-
+    @font-face {
+    font-family: 'Common Pixel';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Common Pixel'), url('https://fonts.cdnfonts.com/s/7553/COMMP___.woff') format('woff');
+}
     h1 {
       font-family: 'Common Pixel', sans-serif;
       font-size: 50px;
