--- a/index.html
+++ b/index.html
@@ -47,9 +47,28 @@
       color: black;
       text-decoration: underline;
     }
+    .img1 {
+      position: absolute;
+      width:11vw;
+      height:5vw;
+      top: 30vw;
+      right: 62vw;
+    }
+    .image {
+      opacity: 1;
+      display: block;
+      width: 100%;
+      height: auto;
+      transition: .5s ease;
+      backface-visibility: hidden;
+    }
+    .img1:hover .image {
+      opacity: 0.3;
+    }
 
 </style>
 </head>
+
 
 <body>
   <div class="navbar">
@@ -63,7 +82,9 @@
   <br>
   <center><img src="bg.png" style="position: absolute;width:50vw;top: 15vw;right: 26vw;"></center>
 
-  <a href="https://smpinhwa.edu.my/"><img src="peng.png" style="position: relative;width:11vw;height:5vw;position: absolute;top: 30vw;right: 64vw;"></a>
+  <div class="img1">
+  <a href="https://smpinhwa.edu.my/"><img src="peng.png" class="image"></a>
+  </div>
 
 </body>
 </html>
