--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       font-family: 'Common Pixel', sans-serif;
       font-size: 50px;
       color: cornsilk;
+      text-align: center;
     }
     p {
       font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -24,6 +25,12 @@
       background-image:url('gif.gif'); background-repeat:repeat;
       background-attachment: scroll; 
       background-size: cover;
+    }
+    .bg {
+      position: absolute;
+      width:50vw;
+      right: 55vh;
+      bottom: 10vh;
     }
     .navbar {
       overflow: hidden;
@@ -69,19 +76,17 @@
 </style>
 </head>
 
-
 <body>
   <div class="navbar">
-    <a href="#home">Home</a>
+    <a href="https://zhonix05.github.io/ZhonixLab/">Home</a>
     <a href="#other">Other</a>
   </div>
 
   <br>
   <br>
-  <center><h1>Zhonix StudyRoom</center></h1>
+  <h1>Zhonix StudyRoom</h1>
   <br>
-  <center><img src="bg.png" style="position: absolute;width:50vw;top: 15vw;right: 26vw;"></center>
-
+  <img src="bg.png" class="bg">
   <div class="img1">
   <a href="https://smpinhwa.edu.my/"><img src="peng.png" class="image"></a>
   </div>
