--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>zhonix.lab</title>
+  <link rel = "icon" href = "ee.png"  type = "image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     @font-face {
