--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
   <img src="bg.png" class="bg">
   <div class="navbar">
     <a href="https://zhonix05.github.io/ZhonixLab/">Home</a>
-    <a href="#other">TimeTable</a>
+    <a href="#timetable">TimeTable</a>
     <div class="dropdown">
       <a class="droptdn">Other</a>
       <div class="dropdown-content">
@@ -275,7 +275,7 @@
   </div>
 
   <div class="pic1">
-    <a href="#"><img src="1.png" class="image"></a>
+    <a href="https://zhonix05.github.io/ZhonixLab/chinese"><img src="1.png" class="image"></a>
     <span class="tooltip">Chinese</span>
   </div>
   <div class="pic2">
