--- a/chinese.html
+++ b/chinese.html
@@ -5,10 +5,14 @@
 	<title>zhonix.lab</title>
 	<link rel = "icon" href = "ee.png"  type = "image/x-icon">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-</style>
+	<style>
+
+	</style>
 </head>
 
 <body>
+	<h1>Chinese page</h1>
+	<p><a href="https://zhonix05.github.io/ZhonixLab/"></a></p>
+
 </body>
 </html>
