--- a/chinese.html
+++ b/chinese.html
@@ -1,23 +1,90 @@
-	<!DOCTYPE html>
-	<html>
-	<head>
-		<meta charset="UTF-8">
-		<title>zhonix.lab</title>
-		<link rel = "icon" href = "ee.png"  type = "image/x-icon">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<style>
-			@font-face {
-    		font-family: 'Common Pixel';
-    		font-style: normal;
-    		font-weight: 400;
-    		src: local('Common Pixel'), url('https://fonts.cdnfonts.com/s/7553/COMMP___.woff') format('woff');
-    		}
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="UTF-8">
+	<title>zhonix.lab</title>
+	<link rel = "icon" href = "ee.png"  type = "image/x-icon">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<style>
+		@font-face {
+    	font-family: 'Common Pixel';
+    	font-style: normal;
+    	font-weight: 400;
+    	src: local('Common Pixel'), url('https://fonts.cdnfonts.com/s/7553/COMMP___.woff') format('woff');
+    	}
+		.bg {
+			background-color: burlywood;
+		}
+		h1 {
+      		font-size: 50px;
+      		color: cornsilk;
+		}
+		.navbar {
+			overflow: hidden;
+			background-color: black;
+      		top: 0;
+      		width: 100%;
+    	}
+    	.navbar a {
+      		float: left;
+			display: block;
+			color: #f2f2f2;
+      		text-align: center;
+      		padding: 14px 16px;
+      		font-size: 17px;
+    	}
+    	.dropdown {
+      		float: left;
+      		overflow: hidden;
+    	}
+    	.dropdown .dropbtn {
+			font-size: 16px;  
+			color: white;
+      		padding: 14px 16px;
+      		background-color: inherit;
+      		margin: 0;
+    	}
+    	.dropdown-content {
+      		display: none;
+      		position: absolute;
+      		background-color: #f9f9f9;
+     		min-width: 120px;
+      		box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    	}
+    	.dropdown-content a {
+      		float: none;
+      		color: black;
+      		padding: 12px 16px;
+      		text-decoration: none;
+      		display: block;
+      		text-align: left;
+    	}
+    	.dropdown:hover .dropdown-content {
+      		display: block;
+    	}	
+    	.navbar a:hover, .dropdown:hover .dropbtn {
+      		text-decoration: none;
+      		background-color: darkgrey;
+      		color: black;
+    	}
 		</style>
 	</head>
 
 	<body>
 		<h1>Chinese page</h1>
-		<a href="https://zhonix05.github.io/ZhonixLab/">Home</a>
+		<div class="navbar">
+			<a href="https://zhonix05.github.io/ZhonixLab/">Home</a>
+			<a href="#timetable">TimeTable</a>
+			<div class="dropdown">
+			  <a class="droptdn">Other</a>
+			  <div class="dropdown-content">
+				<a href="#">1</a>
+				<a href="#">2</a>
+				<a href="#">3</a>
+				<a href="#">4</a>
+			  </div>
+			</div>
+		  </div>
 
 	</body>
 	</html>
