--- a/chinese.html
+++ b/chinese.html
@@ -12,7 +12,7 @@
     	font-weight: 400;
     	src: local('Common Pixel'), url('https://fonts.cdnfonts.com/s/7553/COMMP___.woff') format('woff');
     	}
-		.bg {
+		body {
 			background-color: burlywood;
 		}
 		h1 {
@@ -71,7 +71,6 @@
 	</head>
 
 	<body>
-		<h1>Chinese page</h1>
 		<div class="navbar">
 			<a href="https://zhonix05.github.io/ZhonixLab/">Home</a>
 			<a href="#timetable">TimeTable</a>
@@ -85,6 +84,8 @@
 			  </div>
 			</div>
 		  </div>
+
+		<h1>Chinese 华文</h1>
 
 	</body>
 	</html>
