--- a/chinese.html
+++ b/chinese.html
@@ -14,10 +14,14 @@
     	}
 		body {
 			background-color: burlywood;
+			font-family: 'Common Pixel', sans-serif;
 		}
 		h1 {
       		font-size: 50px;
       		color: cornsilk;
+		}
+		p {
+			font-size: 20px;
 		}
 		.navbar {
 			overflow: hidden;
@@ -85,7 +89,8 @@
 			</div>
 		  </div>
 
-		<h1>Chinese 华文</h1>
+		<h1>Chinese</h1>
+		<p>华文</p>
 
 	</body>
 	</html>
