--- a/home/index.html
+++ b/home/index.html
@@ -254,7 +254,7 @@
 <body>
   <img src="bg.png" class="bg">
   <div class="navbar">
-    <a href="https://zhonix05.github.io/ZhonixLab/">Home</a>
+    <a href="https://zhonix05.github.io/ZhonixLab/home/">Home</a>
     <a href="#timetable">TimeTable</a>
     <div class="dropdown">
       <a class="droptdn">Other</a>
