--- a/chinese/index.html
+++ b/chinese/index.html
@@ -71,12 +71,21 @@
       		background-color: darkgrey;
       		color: black;
     	}
+		#文学常识 {
+			height: 100vh;
+			background-color: aquamarine;
+		}
+		#文言文 {
+			height: 100vh;
+			background-color: cornflowerblue;
+		}
+
 		</style>
 	</head>
 
 	<body>
 		<div class="navbar">
-			<a href="https://zhonix05.github.io/ZhonixLab/">Home</a>
+			<a href="https://zhonix05.github.io/ZhonixLab/home">Home</a>
 			<a href="#timetable">TimeTable</a>
 			<div class="dropdown">
 			  <a class="droptdn">Other</a>
@@ -89,8 +98,14 @@
 			</div>
 		  </div>
 
-		<h1>Chinese waka waka</h1>
-		<p>华文</p>
+		<h1>Chinese<s/h1>
+		<h2>华文</h2>
+
+		<div class="main" id="文学常识">
+			<h2>文学常识</h2>
+			<p>eeee</p>
+			<a href="#文学常识">文学常识</a>
+		</div>
 
 	</body>
 	</html>
