--- a/chinese/index.html
+++ b/chinese/index.html
@@ -6,15 +6,9 @@
 <link rel = "icon" href = "ee.png"  type = "image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-	@font-face {
-    	font-family: 'Common Pixel';
-    	font-style: normal;
-    	font-weight: 400;
-    	src: local('Common Pixel'), url('https://fonts.cdnfonts.com/s/7553/COMMP___.woff') format('woff');
-    	}
 		body {
 			background-color: burlywood;
-			font-family: 'Common Pixel', sans-serif;
+			font-family: "LiGothic", "FangSong", Arial, serif;
 		}
 		h1 {
       		font-size: 50px;
@@ -71,11 +65,11 @@
       		background-color: darkgrey;
       		color: black;
     	}
-		#文学常识 {
+		#wenxue {
 			height: 100vh;
 			background-color: aquamarine;
 		}
-		#文言文 {
+		#wenyan {
 			height: 100vh;
 			background-color: cornflowerblue;
 		}
@@ -98,13 +92,12 @@
 			</div>
 		  </div>
 
-		<h1>Chinese<s/h1>
-		<h2>华文</h2>
-
-		<div class="main" id="文学常识">
+		<h1>华文</h1>
+		<div class="main" id="wenxue">
+			<a href="#wenxue">文学常识</a>
 			<h2>文学常识</h2>
 			<p>eeee</p>
-			<a href="#文学常识">文学常识</a>
+			
 		</div>
 
 	</body>
