--- a/chinese/index.html
+++ b/chinese/index.html
@@ -6,99 +6,102 @@
 <link rel = "icon" href = "ee.png"  type = "image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-		body {
-			background-color: burlywood;
-			font-family: "LiGothic", "FangSong", Arial, serif;
-		}
-		h1 {
-      		font-size: 50px;
-      		color: cornsilk;
-		}
-		p {
-			font-size: 20px;
-		}
-		.navbar {
-			overflow: hidden;
-			background-color: black;
-      		top: 0;
-      		width: 100%;
-    	}
-    	.navbar a {
-      		float: left;
-			display: block;
-			color: #f2f2f2;
-      		text-align: center;
-      		padding: 14px 16px;
-      		font-size: 17px;
-    	}
-    	.dropdown {
-      		float: left;
-      		overflow: hidden;
-    	}
-    	.dropdown .dropbtn {
-			font-size: 16px;  
-			color: white;
-      		padding: 14px 16px;
-      		background-color: inherit;
-      		margin: 0;
-    	}
-    	.dropdown-content {
-      		display: none;
-      		position: absolute;
-      		background-color: #f9f9f9;
-     		min-width: 120px;
-      		box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    	}
-    	.dropdown-content a {
-      		float: none;
-      		color: black;
-      		padding: 12px 16px;
-      		text-decoration: none;
-      		display: block;
-      		text-align: left;
-    	}
-    	.dropdown:hover .dropdown-content {
-      		display: block;
-    	}	
-    	.navbar a:hover, .dropdown:hover .dropbtn {
-      		text-decoration: none;
-      		background-color: darkgrey;
-      		color: black;
-    	}
-		#wenxue {
-			height: 100vh;
-			background-color: aquamarine;
-		}
-		#wenyan {
-			height: 100vh;
-			background-color: cornflowerblue;
-		}
+	html {
+		scroll-behavior: smooth;
+	}
+	body {
+		background-color: burlywood;
+		font-family: "LiGothic", "FangSong", Arial, serif;
+	}
+	h1 {
+      	font-size: 50px;
+      	color: cornsilk;
+	}
+	p {
+		font-size: 20px;
+	}
+	.navbar {
+		overflow: hidden;
+		background-color: black;
+      	top: 0;
+      	width: 100%;
+    }
+    .navbar a {
+      	float: left;
+		display: block;
+		color: #f2f2f2;
+      	text-align: center;
+      	padding: 14px 16px;
+      	font-size: 17px;
+    }
+    .dropdown {
+      	float: left;
+      	overflow: hidden;
+    }
+    .dropdown .dropbtn {
+		font-size: 16px;  
+		color: white;
+      	padding: 14px 16px;
+      	background-color: inherit;
+      	margin: 0;
+    }
+    .dropdown-content {
+      	display: none;
+      	position: absolute;
+      	background-color: #f9f9f9;
+     	min-width: 120px;
+      	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    }
+    .dropdown-content a {
+      	float: none;
+      	color: black;
+      	padding: 12px 16px;
+      	text-decoration: none;
+      	display: block;
+      	text-align: left;
+    }
+    .dropdown:hover .dropdown-content {
+      	display: block;
+    }	
+    .navbar a:hover, .dropdown:hover .dropbtn {
+      	text-decoration: none;
+      	background-color: darkgrey;
+      	color: black;
+    }
+	#wenxue {
+		height: 100vh;
+		background-color: aquamarine;
+	}
+	#wenyan {
+		height: 100vh;
+		background-color: cornflowerblue;
+	}
 
-		</style>
-	</head>
+	</style>
+</head>
 
-	<body>
-		<div class="navbar">
-			<a href="https://zhonix05.github.io/ZhonixLab/home">Home</a>
-			<a href="#timetable">TimeTable</a>
-			<div class="dropdown">
-			  <a class="droptdn">Other</a>
-			  <div class="dropdown-content">
-				<a href="#">1</a>
-				<a href="#">2</a>
-				<a href="#">3</a>
-				<a href="#">4</a>
-			  </div>
+<body>
+	<div class="navbar">
+		<a href="https://zhonix05.github.io/ZhonixLab/home">Home</a>
+		<a href="#timetable">TimeTable</a>
+		<div class="dropdown">
+			<a class="droptdn">Other</a>
+			<div class="dropdown-content">
+			<a href="#">1</a>
+			<a href="#">2</a>
+			<a href="#">3</a>
+			<a href="#">4</a>
 			</div>
-		  </div>
-
-		<h1>华文</h1>
-		<div class="main" id="wenxue">
-			<a href="#wenxue">文学常识</a>
-			<h2>文学常识</h2>
-			<p>eeee</p>
-			
 		</div>
+	</div>
 
-	</body>
-	</html>
+	<h1>华文</h1>
+	<div class="main" id="wenxue">
+		<a href="#wenxue">文学常识</a>
+		<h2>文学常识</h2>
+		<p>eeee</p>
+			
+	</div>
+
+</body>
+</html>
