--- a/chinese/index.html
+++ b/chinese/index.html
@@ -6,19 +6,30 @@
 <link rel = "icon" href = "ee.png"  type = "image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+	@font-face {
+    font-family: 'Common Pixel';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Common Pixel'), url('https://fonts.cdnfonts.com/s/7553/COMMP___.woff') format('woff');
+    }
 	html {
 		scroll-behavior: smooth;
 	}
 	body {
 		background-color: burlywood;
-		font-family: "LiGothic", "FangSong", Arial, serif;
+		font-family: 'Common Pixel', sans-serif;
 	}
 	h1 {
       	font-size: 50px;
       	color: cornsilk;
+		font-family: "LiGothic", "FangSong", Arial, serif;  
+	}
+	h2 {
+		font-family: "LiGothic", "FangSong", Arial, serif;  
 	}
 	p {
 		font-size: 20px;
+		font-family: "LiGothic", "FangSong", Arial, serif;  
 	}
 	.navbar {
 		overflow: hidden;
@@ -99,7 +110,7 @@
 	<div class="main" id="wenxue">
 		<a href="#wenxue">文学常识</a>
 		<h2>文学常识</h2>
-		<p>eeee</p>
+		<p>梁实秋</p>
 			
 	</div>
 
