--- a/chinese/index.html
+++ b/chinese/index.html
@@ -87,6 +87,10 @@
 		height: 100vh;
 		background-color: cornflowerblue;
 	}
+	#yingyongwen {
+		height: 100vh;
+		background-color: darkgray;
+	}
 
 	</style>
 </head>
@@ -107,11 +111,23 @@
 	</div>
 
 	<h1>华文</h1>
+	<a href="#wenxue">文学常识</a>
+	<a href="#wenyan">文言文</a>
+	<a href="#yingyongwen">应用文</a>
+
 	<div class="main" id="wenxue">
-		<a href="#wenxue">文学常识</a>
 		<h2>文学常识</h2>
 		<p>梁实秋</p>
-			
+	</div>
+
+	<div class="main" id="wenyan">
+		<h2>文言文</h2>
+		<p>夜雨寄北</p>
+	</div>
+
+	<div class="main" id="yingyongwen">
+		<h2>应用文</h2>
+		<p>通告 启事 公函</p>
 	</div>
 
 </body>
