--- a/chinese/index.html
+++ b/chinese/index.html
@@ -18,6 +18,7 @@
 	body {
 		background-color: burlywood;
 		font-family: 'Common Pixel', sans-serif;
+		background-attachment: scroll;
 	}
 	h1 {
       	font-size: 50px;
@@ -89,29 +90,17 @@
 	#wenxue {
 		height: 100vh;
 		background-color: #f9f9f9;
-		opacity: 0.5;
 		font-size: 20px;
-	}
-	#wenxue:hover {
-		opacity: 1.0;
 	}
 	#wenyan {
 		height: 100vh;
 		background-color: #f9f9f9;
-		opacity: 0.5;
 		font-size: 20px;
-	}
-	#wenyan:hover {
-		opacity: 1.0;
 	}
 	#yingyongwen {
 		height: 100vh;
 		background-color: aliceblue;
-		opacity: 0.5;
 		font-size: 20px;
-	}
-	#yingyongwen:hover {
-		opacity: 1.0;
 	}
 	#more {display: none;}
 
@@ -156,32 +145,12 @@
 	<div id="wenxue">
 		<h2>文学常识</h2>
 		<p>《记梁任公先生的一次演讲》
-			<span id="dots">...</span><span id="more">
 				<br>&nbsp;作者：梁实秋，原名治华 #中国 #散文家 #翻译家
 				<br>《新月》月刊主编
 				<br> 《雅舍小品》《秋室杂文》
 				<br>&nbsp;梁任公
-		</span></p>
-		&nbsp;<button onclick="myFunction()" id="myBtn">Read more</button>
+			</p>
 	</div>
-
-	<script>
-		function myFunction() {
-		  var dots = document.getElementById("dots");
-		  var moreText = document.getElementById("more");
-		  var btnText = document.getElementById("myBtn");
-		
-		  if (dots.style.display === "none") {
-			dots.style.display = "inline";
-			btnText.innerHTML = "Read more"; 
-			moreText.style.display = "none";
-		  } else {
-			dots.style.display = "none";
-			btnText.innerHTML = "Read less"; 
-			moreText.style.display = "inline";
-		  }
-		}
-		</script>
 
 	<div id="wenyan">
 		<h2>文言文</h2>
