--- a/home/index.html
+++ b/home/index.html
@@ -258,7 +258,7 @@
     <div class="dropdown">
       <a class="droptdn">Other</a>
       <div class="dropdown-content">
-        <a href="#">1</a>
+        <a href="https://zhonix05.github.io/ZhonixLab/home/computer">computer</a>
         <a href="#">2</a>
         <a href="#">3</a>
         <a href="#">4</a>
