--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <br>
                             <h1>预告片 | Trailer</h11>
                             <br>
-                            <iframe width="1050" height="515" src="https://www.youtube.com/embed/fXmAurh012s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe width="100%" height="515" src="https://www.youtube.com/embed/fXmAurh012s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </center>
                     </td>
                 </tr>
